Fixing type tool spacing on large screen

--- a/assets/scss/components/_type-tester.scss
+++ b/assets/scss/components/_type-tester.scss
@@ -96,14 +96,20 @@
           margin-bottom: 0;
           flex-basis: auto;
 
+          &#glyphsTypeToggle {
+            padding-right: 0;
+          }
           &#fontSizeTool {
             order: 1;
+            padding-right: 0;
           }
           &#textAlignment {
             order: 2;
+            padding-left: 0;
           }
           &#colorPairs {
             order: 3;
+            padding-left: 0;
           }
         }
       }
